--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
                     <a href="https://twitter.com/" class="icon-social" target="_blank"><img src="img/twitter.svg"></a>
                     <a href="https://facebook.com/" class="icon-social" target="_blank"><img src="img/facebook.svg"></a>
                     <a href="https://instagram.com/" class="icon-social" target="_blank"><img src="img/instagram.svg"></a>
-                    <a href="https://linkedin.com/" class="icon-social" target="_blank"><img src="img/linkedin.svg"></a>
-                    <a href="mailto:fbtdev@gmail.com" class="icon-social" target="_blank"><img src="img/mail.svg"></a>
+                    <a href="mailto:fbtdev.bussiness@gmail.com" class="icon-social" target="_blank"><img src="img/mail.svg"></a>
                 </div>
                 <h6 class="subtitle-footer2">© FBT Dev | Front-end</h6>
             </div>
