--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
                 <img src=img/icon2.svg height="50" class="icon-footer" alt="icon">
                 <h3 class="subtitle-footer">Living, learning, & leveling up<br>one day at a time.</h3>
                 <div class="icons-footer text-center">
-                    <a href="https://twitter.com/" class="icon-social" target="_blank"><img src="img/twitter.svg"></a>
-                    <a href="https://facebook.com/" class="icon-social" target="_blank"><img src="img/facebook.svg"></a>
                     <a href="https://instagram.com/" class="icon-social" target="_blank"><img src="img/instagram.svg"></a>
+                    <a href="https://linkedin.com/" class="icon-social" target="_blank"><img src="img/linkedin.svg"></a>
                     <a href="mailto:fbtdev.bussiness@gmail.com" class="icon-social" target="_blank"><img src="img/mail.svg"></a>
                 </div>
                 <h6 class="subtitle-footer2">© FBT Dev | Front-end</h6>
